@startuml "LunchLog"

class CustomUser {
    * id: number <<generated>>
    * uuid: UUID <<generated>>
    * email: text
    * password: text <<encrypted>>
    --
    first_name: text
    last_name: text
    is_active: boolean
    is_staff: boolean
}
note top: This and other default Django fields

abstract class Address {
    * id: number <<generated>>
    * address_line_1: text
    address_line_2: text
    * postal_code: text
    * city: text
    * country: text
    state: text
}

class Receipt {
    * id: number <<generated>>
    * uuid: UUID <<generated>>
    * date: datetime
    * price: decimal
    * image_url: text
    * restaurant_name: text
    * restaurant_address: text
    * user: FK <<CustomUser>>
    * image: <<Image>>
}

class Restaurant {
    * id: number <<generated>>
    * uuid: UUID <<generated>>
    * place_id: text
    * name: text
    formatted_address: text
    serves_beer: boolean
    serves_breakfast: boolean
    serves_brunch: boolean
    serves_dinner: boolean
    serves_lunch: boolean
    serves_vegetarian_food: boolean
    serves_wine: boolean
    takeout: boolean
    delivery: boolean
    opening_hours: JSONField

    receipt: FK <<Receipt>>
    user: FK <<CustomUser>>
}

CustomUser ||--o{ Receipt
Receipt ||--o{ Restaurant
Address <|-- Restaurant

@enduml
